Fixed-19573: Alignment Issue when create a new email template admin.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -121,9 +121,6 @@
 
         > .admin__field-control {
             #mix-grid .column(@field-control-grid__column, @field-grid__columns);
-            .admin__field {
-                margin-top: 8px;
-            }
         }
 
         > .admin__field-label {
@@ -149,6 +146,14 @@
                     margin-top: -@indent__l;
                 }
             }
+        }
+
+        &#currently_used_for {
+            > .admin__field-control {
+                .admin__field {
+                    margin-top: 8px;
+                }
+            } 
         }
     }
 }
